--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,26 +7,23 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/countTv"
+        android:id="@+id/count_textview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="@dimen/material_margin"
         android:gravity="center"
         android:text="@string/zero"
-        android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/clickBtn"
+        android:textSize="@dimen/small_text"
+        app:layout_constraintBottom_toTopOf="@+id/click_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/clickBtn"
+        android:id="@+id/click_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="@dimen/material_margin"
         android:text="@string/click"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
